2001-10-19  Darin Adler  <darin@bentspoon.com>

	* hack-macros/nautilus-macros.m4: Change comment so that we
	won't fool automake into thinking it's a macro.

2001-10-05  Darin Adler  <darin@bentspoon.com>

	* NEWS: Oops. Forgot to give Ramiro credit.

==== librsvg 1.0.2 ====

2001-10-04  Darin Adler  <darin@bentspoon.com>

	* NEWS: Update for 1.0.2.
	* configure.in: Update version to 1.0.2.

2001-09-29  Darin Adler  <darin@bentspoon.com>

	* rsvg-ft.c: (rsvg_ft_measure_or_render_string): Fix font metrics
	to take affine matrix into account.

2001-09-24  Darin Adler  <darin@bentspoon.com>

        * rsvg.c: (rsvg_entity_decl): Change so it can handle a NULL
        for the content passed in. Happens at least if the .svg file
        is empty and presumably in other cases.

2001-09-15  Darin Adler  <darin@bentspoon.com>

	* rsvg-paint-server.c: (rsvg_paint_server_lin_grad_free),
	(rsvg_paint_server_rad_grad_free): Fix some code that does
	a null dereference.

	* test-rsvg.c: (main): Add a missing exit statement.

2001-07-25  Ramiro Estrugo  <ramiro@fateware.com>

	* librsvg.spec.in:
	Add missing pkg-config file.
	Add missing m4 file.

2001-07-25  Ramiro Estrugo  <ramiro@fateware.com>

	* Makefile.am:
	* configure.in:
	* librsvg-1.0.pc.in:
	Change includedir to librsvg-1/librsvg that it can cohabitate with
	librsvg from the GNOME2 platform.

	* librsvg.spec.in:
	Update for library and includedir name changes, plus some extra
	cleanup.

2001-07-21  Darin Adler  <darin@bentspoon.com>

	* rsvg-ft.c: (rsvg_ft_measure_or_render_string):
	Fix bug where we would render past the end of the passed-in
	string if there are any multi-byte sequences in the string.

	* autogen.sh: Remove xml-i18n-toolize.

	* configure.in: Remove some commented-out stuff that could
	confuse scripts that grep through this file.

	* .cvsignore: Remove some files that should not be generated.

==== librsvg 1.0.1 ====

2001-07-05  Darin Adler  <darin@bentspoon.com>
